Fix unreadable text color in report modal for some statuses (#9716)
Fix #9697

--- a/app/javascript/styles/mastodon/components.scss
+++ b/app/javascript/styles/mastodon/components.scss
@@ -4055,6 +4055,7 @@ a.status-card.compact:hover {
     color: $highlight-text-color;
   }
 
+  .status__content,
   .status__content p {
     color: $inverted-text-color;
   }
